--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+<nav>
 <ul>
-    <li>Home Page</li>
+    <li><a href="#">Home Page</a></li>
     <li><a href="contacts.html">Contacts</a> </li>
 </ul>
+</nav>
+<!--Виды инпутов- поле ввода-->
+<input type="text">
+<input type="button" value="some">
+<input type="checkbox" name="" id="">
+<input type="datetime" name="" id="">
+<input type="password" name="" id="">
+
+<hr>
+
+<label for="peas">What is your name?</label>
+<input type="text" name="peas" id="peas">
+
+<hr>
+<br>
+<button type="button" >Click Me</button>
+<button type="submit">RESET</button>
+<button type="reset">RESET</button>
+
 
     <h1>Hery Smit</h1>
     <img src="my-cat.jpeg" alt="my cv photo"width="200"hight="200">
